# aip-project-2-buhs

./: CMakeLists.txt  Doxyfile  Makefile  README.md  TensorsNet.cpp  TensorsNet.h  TrainingLoop.cpp  TrainingLoop.h  data_reader.cpp  data_reader.h  drawing.txt  drawing_28x28.txt  main.cpp  matrix.cpp  matrix.h  neural_net.cpp  neural_net.h  predict.cpp  predict.h  program.cpp  program.h  testApp.cpp  testMatrix.cpp  testPredict.cpp
build1/: CMakeCache.txt  Makefile  cmake_install.cmake
doc/html/: TensorsNet_8h.html  TensorsNet_8h__dep__incl.dot  TensorsNet_8h__incl.dot  TensorsNet_8h_source.html  TrainingLoop_8h.html  TrainingLoop_8h__dep__incl.dot  TrainingLoop_8h__incl.dot  TrainingLoop_8h_source.html  annotated.html  classMatrix-members.html  classMatrix.html  classPaintApp-members.html  classPaintApp.html  classPaintApp__coll__graph.dot  classPaintApp_a2df219662de075052f75720540cfd380_icgraph.dot  classTensorsNet-members.html  classTensorsNet.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.dot  matrix_8h.html  matrix_8h__dep__incl.dot  matrix_8h__incl.dot  matrix_8h_source.html  menudata.js  predict_8h.html  predict_8h__dep__incl.dot  predict_8h__incl.dot  predict_8h_source.html  program_8h.html  (+6 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+17 more)
doc/latex/: TensorsNet_8h.tex  TensorsNet_8h.tex.tmp  TensorsNet_8h__dep__incl.dot  TensorsNet_8h__incl.dot  TrainingLoop_8h.tex  TrainingLoop_8h__dep__incl.dot  TrainingLoop_8h__incl.dot  annotated.tex  classMatrix.tex  classPaintApp.tex  classPaintApp__coll__graph.dot  classPaintApp_a2df219662de075052f75720540cfd380_icgraph.dot  classTensorsNet.tex  files.tex  main_8cpp.tex  main_8cpp__incl.dot  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.dot  matrix_8h.tex  matrix_8h__dep__incl.dot  matrix_8h__incl.dot  predict_8h.tex  predict_8h__dep__incl.dot  predict_8h__incl.dot  program_8h.tex  program_8h__dep__incl.dot  program_8h__incl.dot  refman.tex  structLayer.tex  structLayer__coll__graph.dot
learned/: bias1.txt  bias2.txt  weights1.txt  weights2.txt
model/: weights_epoch_0.txt  weights_epoch_1.txt  weights_epoch_10.txt  weights_epoch_11.txt  weights_epoch_12.txt  weights_epoch_13.txt  weights_epoch_14.txt  weights_epoch_15.txt  weights_epoch_16.txt  weights_epoch_17.txt  weights_epoch_18.txt  weights_epoch_19.txt  weights_epoch_2.txt  weights_epoch_20.txt  weights_epoch_21.txt  weights_epoch_22.txt  weights_epoch_23.txt  weights_epoch_24.txt  weights_epoch_25.txt  weights_epoch_26.txt  weights_epoch_27.txt  weights_epoch_28.txt  weights_epoch_29.txt  weights_epoch_3.txt  weights_epoch_30.txt  weights_epoch_31.txt  weights_epoch_32.txt  weights_epoch_33.txt  weights_epoch_34.txt  weights_epoch_35.txt  weights_epoch_36.txt  weights_epoch_37.txt  weights_epoch_38.txt  weights_epoch_39.txt  weights_epoch_4.txt  weights_epoch_40.txt  weights_epoch_41.txt  weights_epoch_42.txt  weights_epoch_43.txt  weights_epoch_44.txt  (+60 more)
